added a testimonial of Anshul Mehrotra

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="hero">
         <h1>Live your life by a compass, not a clock</h1>
         <span>-Stephen Covey</span>
-        <button><a href="./activity.html"> Explore Now   </a> </button>
+        <button><a href="./activity.html"> Explore Now </a></button>
         <img src="./assets/arrow-down.svg" alt="down" class="down" />
       </div>
     </section>
@@ -190,22 +190,21 @@
           </div>
         </div>
 
-
         <div class="test1">
           <div class="image">
-            <img src="./assets/anurag.jpg" alt="" class="person-image" />
+            <img src="./assets/person.jpg" alt="" class="person-image" />
             <img src="./assets/test-mark.svg" alt="" class="test-logo" />
           </div>
           <div class="name">
-            <h1>Anurag Mehrotra</h1>
+            <h1>Anshul Mehrotra</h1>
             <p>Finance Professional</p>
           </div>
           <div class="desc-test">
-            Trekking , the word itself surrounds you with excitement and you
-            tend to imagine the nature and its personified beauty, the
-            enthralling peaks, the subtle breeze and refreshing clouds. Truly
-            speaking these were not just the feelings but a real world
-            experienced during my first and subsequent treks
+            This was my first trek and man and it was such a mind-blowing
+            experience. The scenery was beautiful, the campsites were good and
+            the best part was the team. The guides were really good, they
+            provided a lot of information and were very helpful throughout the
+            trek.
           </div>
         </div>
 
@@ -222,8 +221,8 @@
             The best of the journeys are the ones that are least planned. We
             left Indore with the dream of witnessing natural beauty, to take
             selfies, the thrill of staying in the tents and witness the
-            astounding views of night sky. Though my dreams were fulfilled but trekking takes temporary toll on your
-            mind and body.
+            astounding views of night sky. Though my dreams were fulfilled but
+            trekking takes temporary toll on your mind and body.
           </div>
         </div>
       </div>
@@ -266,9 +265,13 @@
       </div>
       <div class="contact-us">
         <h2>Conact Us</h2>
-        <p><a href="https://wa.me/919816393460">  Tara Khatri </a></p>
-        <p><a href="https://wa.me/919926322316">  Sonu Mehrotra </a></p>
-        <p><a target="_blank" href="mailto:hangoutadventure2018@gmail.com"> Email Us </a></p>
+        <p><a href="https://wa.me/919816393460"> Tara Khatri </a></p>
+        <p><a href="https://wa.me/919926322316"> Sonu Mehrotra </a></p>
+        <p>
+          <a target="_blank" href="mailto:hangoutadventure2018@gmail.com">
+            Email Us
+          </a>
+        </p>
       </div>
     </footer>
 
