--- a/index.html
+++ b/index.html
@@ -191,21 +191,21 @@
         </div>
 
 
-        <div class="test1">
+         <div class="test1">
           <div class="image">
-            <img src="./assets/anurag.jpg" alt="" class="person-image" />
+            <img src="./assets/person.jpg" alt="" class="person-image" />
             <img src="./assets/test-mark.svg" alt="" class="test-logo" />
           </div>
           <div class="name">
-            <h1>Anurag Mehrotra</h1>
+            <h1>Anshul Mehrotra</h1>
             <p>Finance Professional</p>
           </div>
           <div class="desc-test">
-            Trekking , the word itself surrounds you with excitement and you
-            tend to imagine the nature and its personified beauty, the
-            enthralling peaks, the subtle breeze and refreshing clouds. Truly
-            speaking these were not just the feelings but a real world
-            experienced during my first and subsequent treks
+            This was my first trek and man and it was such a mind-blowing
+            experience. The scenery was beautiful, the campsites were good and
+            the best part was the team. The guides were really good, they
+            provided a lot of information and were very helpful throughout the
+            trek.
           </div>
         </div>
 
