--- a/activity.html
+++ b/activity.html
@@ -158,11 +158,11 @@
     
           <div class="splide__track">
             <div class="splide__list">
-              <div class="splide__slide"><a href=""><img src="./assets/junga.png" alt=""></a> <p>Camp Junga, Shimla</p></div>
-              <div class="splide__slide"><a href=""><img src="./assets/manali-camp.jpg" alt=""></a> <p>Camp Manali, Manali</p></div>
-              <div class="splide__slide"><a href=""><img src="./assets/tirthan.jpg" alt=""></a> <p>Camp Tirthan, Tirthan valley</p></div>
-              <div class="splide__slide"><a href=""><img src="./assets/tamia.jpg" alt=""></a> <p>Camp Tamia, Madhya Pradesh</p></div>
-              <div class="splide__slide"><a href=""><img src="./assets/sitl.jpg" alt=""></a> <p>Camp Sitlakhet, Uttrakhand</p></div>
+              <div class="splide__slide"><a href="#"><img src="./assets/junga.png" alt=""></a> <p>Camp Junga, Shimla</p></div>
+              <div class="splide__slide"><a href="#"><img src="./assets/manali-camp.jpg" alt=""></a> <p>Camp Manali, Manali</p></div>
+              <div class="splide__slide"><a href="#"><img src="./assets/tirthan.jpg" alt=""></a> <p>Camp Tirthan, Tirthan valley</p></div>
+              <div class="splide__slide"><a href="#"><img src="./assets/tamia.jpg" alt=""></a> <p>Camp Tamia, Madhya Pradesh</p></div>
+              <div class="splide__slide"><a href="#"><img src="./assets/sitl.jpg" alt=""></a> <p>Camp Sitlakhet, Uttrakhand</p></div>
             </div>
           </div>
         </div>
