--- a/activity.html
+++ b/activity.html
@@ -171,7 +171,7 @@
 
       <footer>
         <div class="logo-div">
-          <img src="./assets/logo-white.png" alt="" class="logo-white" />
+          <img src="./assets/logo-white.png" alt="white-logo" class="logo-white" />
         </div>
         <div class="activites-footer">
           <h2>Activities</h2>
