--- a/index.html
+++ b/index.html
@@ -200,7 +200,10 @@
             <p>Finance Professional</p>
           </div>
           <div class="desc-test">
-            This was my first trek and it was such a mind-blowing experience. The scenery was beautiful, the campsites were good and the best part was the team. The guides were really good, they provided a lot of information and were very helpful throughout the trek.
+            This was my first trek and it was such a mind-blowing experience.
+            The scenery was beautiful, the campsites were good and the best part
+            was the team. The guides were really good, they provided a lot of
+            information and were very helpful throughout the trek.
           </div>
         </div>
 
