--- a/activities.html
+++ b/activities.html
@@ -148,7 +148,7 @@
 
       <div class="activity activity-5">
         <div class="left">
-          <img src="./assets/rocks.png" alt="" class="activity-image" />
+          <img src="./assets/bike.png" alt="" class="activity-image" />
         </div>
         <div class="right">
           <h1 class="name">Mountain biking (cycling)</h1>
