--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <section class="section-3">
       <div class="testimonial-para">
         <h1>Testimonials</h1>
-        <p>Let’s see what our previous clients have to say about us!</p>
+        <p>Let’s see what our clients have to say about us!</p>
       </div>
 
       <div class="test-main">
