minor changes in homepage

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <li><a href="https://wa.me/919816393460"> Contact Us </a></li>
           <li><a href="./activity.html"> Activities </a></li>
           <li><a href="./treks.html"> Treks </a></li>
+          <li><a href="./school.html"> Summer Camps </a></li>
         </ul>
       </div>
     </div>
@@ -63,6 +64,7 @@
             <li><a href="https://wa.me/919926322316"> Contact Us </a></li>
             <li><a href="./activity.html"> Activities </a></li>
             <li><a href="./treks.html"> Treks </a></li>
+            <li><a href="./school.html"> Summer Camps </a></li>
           </ul>
         </div>
       </div>
